[package]
name = "rskvs"
version = "0.1.0"
authors = ["Tsumida"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = {version="2.33.0", features=["yaml"]}
failure = "0.1.6"
failure_derive = "0.1.6"
tempfile = "3.1.0"
walkdir = "2.3.1"
serde = ""
serde_json = ""
byteorder = ""
criterion = ""
rand = ""
log = ""
simplelog = ""

